# InventoryInjector

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
data/AS/skse/plugins/: InventoryInjector.as
data/Interface/Translations/: I4IconAddon_ENGLISH.txt  I4IconAddon_POLISH.txt
data/SKSE/Plugins/InventoryInjector/: BSAssets.json  BeyondSkyrimMerchant.json  Dawnguard.json  Dragonborn.json  I4IconAddon.json  Skyrim.json  Wyrmstooth.json  ccASVSSE001-ALMSIVI.json  ccBGSSSE001-Fish.json  ccBGSSSE019-StaffofSheogorath.json  ccBGSSSE025-AdvDSGS.json  ccBGSSSE031-AdvCyrus.json  ccBGSSSE034-MntUni.json  ccBGSSSE036-PetBWolf.json  ccFFBSSE001-ImperialDragon.json  ccKRTSSE001_Altar.json
data/SkyrimSE/: I4IconAddon.esp
data/SkyrimVR/: I4IconAddon.esp
docs/: InventoryInjector.schema.json
src/AS/: Functions.cpp  Functions.h
src/Data/: CustomDataManager.cpp  CustomDataManager.h  CustomDataParser.cpp  CustomDataParser.h  Defines.h  IconUtil.cpp  IconUtil.h  Property.h  PropertyParser.cpp  PropertyParser.h  Rule.cpp  Rule.h  RuleParser.cpp  RuleParser.h
src/Data/Config/: CustomData.cpp  CustomData.h  CustomDataParser.cpp  CustomDataParser.h  ParseUtil.cpp  ParseUtil.h  Property.cpp  Property.h  PropertyParser.cpp  PropertyParser.h  Rule.cpp  Rule.h  RuleParser.cpp  RuleParser.h
src/Data/Defines/: Actor.h  Ammo.h  Armor.h  Book.h  Form.h  Magic.h  Misc.h  Potion.h  SoulGem.h  Weapon.h
src/Hooks/: FavoritesListEntry.cpp  FavoritesListEntry.h  GroupDataExtender.cpp  GroupDataExtender.h  IconSetter.cpp  IconSetter.h  InventoryListEntry.cpp  InventoryListEntry.h  MovieManager.cpp  MovieManager.h
src/PCH/: PCH.h
src/SKSEPlugin/: SKSEPlugin.cpp
